--- a/deny.toml
+++ b/deny.toml
@@ -35,12 +35,7 @@ version = 2
 # List of explicitly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
-allow = [
-    "Apache-2.0",
-    "BSL-1.0",
-    "MIT",
-    "Unicode-DFS-2016"
-]
+allow = ["Apache-2.0", "BSD-3-Clause", "BSL-1.0", "MIT", "Unicode-DFS-2016"]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
 # canonical license text of a valid SPDX license file.
@@ -85,9 +80,9 @@ deny = []
 skip = []
 skip-tree = [
     { crate = "windows-sys", reason = "several crates use outdated versions" },
-    { crate = "bitflags", reason = "faccess, homedir, whoami, et al. can't agree"},
+    { crate = "bitflags", reason = "faccess, homedir, whoami, et al. can't agree" },
     { crate = "nix", reason = "homedir is on an older version" },
-    { crate = "errno", reason = "exec and rustix pull in different versions" }
+    { crate = "errno", reason = "exec and rustix pull in different versions" },
 ]
 
 # This section is considered when running `cargo deny check sources`.
