--- a/cli/tests/cases/compound_cmds/case.yaml
+++ b/cli/tests/cases/compound_cmds/case.yaml
@@ -47,3 +47,10 @@ cases:
       }
 
       myfunc
+
+  - name: "Case with non-dsemi"
+    stdin: |
+      case "b" in
+      a) echo "a";;
+      b) echo "b"
+      esac
