--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -30,7 +30,7 @@ hostname = "0.4.0"
 indexmap = "2.2.6"
 itertools = "0.13.0"
 lazy_static = "1.4.0"
-os_pipe = "1.1.5"
+os_pipe = { version = "1.1.5", features = ["io_safety"] }
 rand = "0.8.5"
 thiserror = "1.0.61"
 tokio = { version = "1.37.0", features = [
@@ -48,9 +48,9 @@ homedir = "0.2.1"
 whoami = "1.5.1"
 
 [target.'cfg(unix)'.dependencies]
+command-fds = "0.3.0"
 exec = "0.3.1"
 nix = { version = "0.29.0", features = ["fs", "process", "signal", "user"] }
-tokio-command-fds = "0.2.1"
 uzers = "0.12.0"
 
 [dev-dependencies]
