--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,15 @@
 FROM ubuntu:latest
 
-ARG DEFAULT_USER=devel
-
+ARG USERNAME=devel
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+    
+# Install basic utilities and prerequisites.
+#   bsdmainutils - provides hexdump, used by integration tests
+#   neovim - for convenience and modern editing
 RUN apt-get update -y && \
     apt-get install -y \
+        bsdmainutils \
         build-essential \
         curl \
         git \
@@ -11,34 +17,35 @@ RUN apt-get update -y && \
         neovim \
         sed \
         sudo \
-        wget \
-        zsh
+        wget
+
+# Install gh cli
+# Reference: https://github.com/cli/cli/blob/trunk/docs/install_linux.md
+RUN mkdir -p -m 755 /etc/apt/keyrings && \
+    wget -qO- https://cli.github.com/packages/githubcli-archive-keyring.gpg | tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null && \
+    chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null && \
+    apt-get update -y && \
+    apt-get install -y gh
 
 # Add a non-root user that we'll do our best to use for development.
-RUN useradd -m devel && \
+RUN userdel ubuntu && \
+    groupadd --gid $USER_GID $USERNAME && \
+    useradd --uid $USER_UID --gid $USER_GID -m $USERNAME && \
     echo "devel ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 
 # Switch to user.
-USER ${DEFAULT_USER}
+USER devel
 
 # Set up path to include rust components.
-ENV PATH="${PATH}:/home/${DEFAULT_USER}/.cargo/bin"
-WORKDIR /tmp
+ENV PATH="${PATH}:/home/devel/.cargo/bin"
 
 # Copy scripts to temp dir.
 WORKDIR /tmp
 
-# Install rust and plugins
-COPY install-rust-and-friends.sh .
-RUN ./install-rust-and-friends.sh
-
-# Install assorted development utilities
-COPY install-dev-tools.sh .
-RUN ./install-dev-tools.sh
-
-# Bring modern conveniences to shell.
-COPY make-shell-comfortable.sh .
-RUN ./make-shell-comfortable.sh
+# Install rust toolchain and cargo tools.
+COPY install-rust-tools.sh .
+RUN ./install-rust-tools.sh
 
 # Switch back to home dir for normal usage.
-WORKDIR /home/${DEFAULT_USER}
+WORKDIR /home/devel
