--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,10 @@
     "files.exclude": {
         "target/": true
     },
-    "terminal.integrated.defaultProfile.linux": "zsh",
+    "terminal.integrated.defaultProfile.linux": "bash",
     "terminal.integrated.profiles.linux": {
-        "zsh": {
-            "path": "/bin/zsh"
+        "bash": {
+            "path": "/bin/bash"
         }
     },
     "rust-analyzer.check.command": "clippy",
