--- a/cli/tests/cases/options.yaml
+++ b/cli/tests/cases/options.yaml
@@ -5,7 +5,7 @@ cases:
       echo "Default options: $-"
 
   - name: "set -a"
-    known_failure: true # Issue #154
+    known_failure: true
     stdin: |
       unexported=original
       set -a
