--- a/cli/tests/cases/redirection.yaml
+++ b/cli/tests/cases/redirection.yaml
@@ -42,7 +42,7 @@ cases:
       ls -d . non-existent-dir &>/dev/null
 
   - name: "Process substitution: input + output"
-    known_failure: true # Issue #151
+    known_failure: true
     stdin: |
       shopt -u -o posix
       cp <(echo hi) >(cat)
