--- a/cli/tests/cases/builtins/shopt.yaml
+++ b/cli/tests/cases/builtins/shopt.yaml
@@ -34,11 +34,12 @@ cases:
     stdin: |
       shopt extglob
 
-  # - name: "shopt -o interactive monitor default"
-  #   args: ["-i"]
-  #   ignore_stderr: true
-  #   stdin: |
-  #     shopt -o monitor
+  - name: "shopt -o interactive monitor default"
+    skip: true
+    args: ["-i"]
+    ignore_stderr: true
+    stdin: |
+      shopt -o monitor
 
   - name: "shopt toggle"
     stdin: |
