--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "brush-parser"
 description = "Shell parser for brush"
+authors.workspace = true
 categories.workspace = true
 edition.workspace = true
 keywords.workspace = true
