--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "brush-parser"
-description = "Shell parser for brush"
+description = "POSIX/bash shell tokenizer and parsers (used by brush-shell)"
 authors.workspace = true
 categories.workspace = true
 edition.workspace = true
