fix: fix typo in release-plz config

--- a/release-plz.toml
+++ b/release-plz.toml
@@ -5,7 +5,7 @@ changelog_update = false
 publish = false
 pr_draft = false
 git_release_draft = true
-git_release_type = pre
+git_release_type = "pre"
 
 [changelog]
 header = """
@@ -32,15 +32,14 @@ body = """
 {% endfor %}\n
 """
 trim = true
-protect_breaking_commits = true
 tag_pattern = ".*v[0-9].*"
 sort_commits = "oldest"
 commit_parsers = [
   { message = "^feat", group = "<!-- 0 -->🚀 Features" },
   { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
+  { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
   { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
   { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
-  { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
   { message = "^style", group = "<!-- 5 -->🎨 Styling" },
   { message = "^test", group = "<!-- 6 -->🧪 Testing" },
   { message = "^build", group = "<!-- 7 -->🛠️ Build" },
@@ -55,6 +54,7 @@ commit_parsers = [
 
 [[package]]
 name = "brush-shell"
+# TODO: reenable this
 # enable the changelog for this package and set path to root
-changelog_update = true
+changelog_update = false
 changelog_path = "./CHANGELOG.md"
