--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ default-members = ["brush-shell", "brush-parser", "brush-core", "brush-interacti
 authors = ["reuben olinsky"]
 categories = ["command-line-utilities", "development-tools"]
 edition = "2021"
-keywords = ["cli", "shell", "sh", "bash", "script", "brush"]
+keywords = ["cli", "shell", "sh", "bash", "script"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/reubeno/brush"
