--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "brush-core"
 description = "Reusable core of a POSIX/bash shell (used by brush-shell)"
+version = "0.1.0"
 categories.workspace = true
 edition.workspace = true
 keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 repository.workspace = true
-version.workspace = true
 
 [lib]
 bench = false
