--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "brush-interactive"
 description = "Interactive layer of brush-shell"
+version = "0.1.0"
 authors.workspace = true
 categories.workspace = true
 edition.workspace = true
@@ -8,7 +9,6 @@ keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 repository.workspace = true
-version.workspace = true
 
 [lib]
 bench = false
