fix: compgen -W expansion
With additional testing we see that the word string passed to
'compgen -W' is not only split but first expanded. Correcting
that fixes completion of arguments to 'complete -p', among
various other commands.

--- a/brush-shell/tests/cases/builtins/compgen.yaml
+++ b/brush-shell/tests/cases/builtins/compgen.yaml
@@ -49,3 +49,10 @@ cases:
       declare myvar2=11
 
       compgen -A variable myvar | sort
+
+  - name: "compgen -W"
+    stdin: |
+      echo "1. Basic compgen -W"
+      compgen -W "one two three" -- t | sort
+      echo "2. compgen -W with expansion"
+      myvar=value compgen -W '${myvar}'
