build: update dependencies

--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -20,7 +20,7 @@ async-recursion = "1.1.0"
 async-trait = "0.1.80"
 brush-parser = { version = "0.1.0", path = "../brush-parser" }
 cached = "0.51.3"
-clap = { version = "4.5.4", features = ["derive"] }
+clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
 fancy-regex = "0.13.0"
 futures = "0.3.30"
 hostname = "0.4.0"
