--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -9,6 +9,7 @@ keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 [lib]
 bench = false
