--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -8,6 +8,7 @@ keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 [lib]
 bench = false
@@ -20,7 +21,8 @@ async-recursion = "1.1.0"
 async-trait = "0.1.80"
 brush-parser = { version = "0.1.0", path = "../brush-parser" }
 cached = "0.51.3"
-clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
+# N.B. Pin to 4.4.18 for now to keep to 1.72.0 as MSRV; 4.5.x requires a later version.
+clap = { version = "=4.4.18", features = ["derive", "wrap_help"] }
 fancy-regex = "0.13.0"
 futures = "0.3.30"
 hostname = "0.4.0"
