--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -9,6 +9,7 @@ keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 [[bin]]
 name = "brush"
@@ -27,14 +28,16 @@ workspace = true
 brush-interactive = { version = "0.1.0", path = "../brush-interactive" }
 brush-parser = { version = "0.1.0", path = "../brush-parser" }
 brush-core = { version = "0.1.0", path = "../brush-core" }
-clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
+# N.B. Pin to 4.4.18 for now to keep to 1.72.0 as MSRV; 4.5.x requires a later version.
+clap = { version = "=4.4.18", features = ["derive", "wrap_help"] }
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
 anyhow = "1.0.86"
-assert_cmd = "2.0.14"
+# N.B. Pin to 2.0.13 for now to keep to 1.72.0 as MSRV; 2.0.14 requires a later version.
+assert_cmd = "=2.0.13"
 assert_fs = "1.1.1"
 colored = "2.1.0"
 descape = "1.1.2"
