--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "brush-shell"
 description = "Rust-implemented shell focused on POSIX and bash compatibility"
-version = "0.2.0"
+version = "0.2.1"
 authors.workspace = true
 categories.workspace = true
 edition.workspace = true
@@ -25,9 +25,9 @@ harness = false
 workspace = true
 
 [dependencies]
-brush-interactive = { version = "0.2.0", path = "../brush-interactive" }
-brush-parser = { version = "0.2.0", path = "../brush-parser" }
-brush-core = { version = "0.2.0", path = "../brush-core" }
+brush-interactive = { version = "^0.2.1", path = "../brush-interactive" }
+brush-parser = { version = "^0.2.1", path = "../brush-parser" }
+brush-core = { version = "^0.2.1", path = "../brush-core" }
 # N.B. Pin to 4.4.18 for now to keep to 1.72.0 as MSRV; 4.5.x requires a later version.
 clap = { version = "=4.4.18", features = ["derive", "wrap_help"] }
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
