--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "brush-core"
 description = "Reusable core of a POSIX/bash shell (used by brush-shell)"
-version = "0.2.1"
+version = "0.2.2"
 categories.workspace = true
 edition.workspace = true
 keywords.workspace = true
@@ -19,7 +19,7 @@ workspace = true
 [dependencies]
 async-recursion = "1.1.0"
 async-trait = "0.1.80"
-brush-parser = { version = "^0.2.1", path = "../brush-parser" }
+brush-parser = { version = "^0.2.2", path = "../brush-parser" }
 cached = "0.51.3"
 # N.B. Pin to 4.4.18 for now to keep to 1.72.0 as MSRV; 4.5.x requires a later version.
 clap = { version = "=4.4.18", features = ["derive", "wrap_help"] }
@@ -47,7 +47,7 @@ whoami = "1.5.1"
 
 [target.'cfg(unix)'.dependencies]
 command-fds = "0.3.0"
-nix = { version = "0.29.0", features = ["fs", "process", "signal", "user"] }
+nix = { version = "0.29.0", features = ["fs", "process", "signal", "term", "user"] }
 procfs = "0.16.0"
 uzers = "0.12.0"
 
