--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -14,7 +14,11 @@ rust-version.workspace = true
 [lib]
 bench = false
 
+[features]
+fuzz-testing = ["dep:arbitrary"]
+
 [dependencies]
+arbitrary = { version = "1.3.2", optional = true, features = ["derive"] }
 indenter = "0.3.3"
 peg = "0.8.3"
 thiserror = "1.0.61"
