--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -30,6 +30,8 @@ brush-parser = { version = "^0.2.2", path = "../brush-parser" }
 brush-core = { version = "^0.2.2", path = "../brush-core" }
 # N.B. Pin to 4.4.18 for now to keep to 1.72.0 as MSRV; 4.5.x requires a later version.
 clap = { version = "=4.4.18", features = ["derive", "wrap_help"] }
+const_format = "0.2.32"
+git-version = "0.3.9"
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
