--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -25,12 +25,22 @@ cached = "0.51.3"
 clap = { version = "=4.4.18", features = ["derive", "wrap_help"] }
 fancy-regex = "0.13.0"
 futures = "0.3.30"
-hostname = "0.4.0"
 itertools = "0.13.0"
 lazy_static = "1.5.0"
-os_pipe = { version = "1.1.5", features = ["io_safety"] }
 rand = "0.8.5"
 thiserror = "1.0.61"
+tracing = "0.1.40"
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+tokio = { version = "1.37.0", features = [
+    "io-util",
+    "macros",
+    "rt",
+] }
+
+[target.'cfg(any(windows, unix))'.dependencies]
+hostname = "0.4.0"
+os_pipe = { version = "1.1.5", features = ["io_safety"] }
 tokio = { version = "1.37.0", features = [
     "io-util",
     "macros",
@@ -39,7 +49,6 @@ tokio = { version = "1.37.0", features = [
     "rt-multi-thread",
     "signal",
 ] }
-tracing = "0.1.40"
 
 [target.'cfg(windows)'.dependencies]
 homedir = "0.2.1"
