--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -20,9 +20,11 @@ workspace = true
 [dependencies]
 brush-parser = { version = "^0.2.3", path = "../brush-parser" }
 brush-core = { version = "^0.2.3", path = "../brush-core" }
+thiserror = "1.0.61"
+tracing = "0.1.40"
+
+[target.'cfg(any(windows, unix))'.dependencies]
 rustyline = { package = "brush-rustyline-fork", version = "14.0.1", features = [
     "derive",
 ] }
-thiserror = "1.0.61"
 tokio = { version = "1.37.0", features = ["macros", "signal"] }
-tracing = "0.1.40"
