--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -32,9 +32,14 @@ brush-core = { version = "^0.2.3", path = "../brush-core" }
 clap = { version = "=4.4.18", features = ["derive", "wrap_help"] }
 const_format = "0.2.32"
 git-version = "0.3.9"
-tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+
+[target.'cfg(not(any(windows, unix)))'.dependencies]
+tokio = { version = "1.37.0", features = ["rt"] }
+
+[target.'cfg(any(windows, unix))'.dependencies]
+tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
 
 [dev-dependencies]
 anyhow = "1.0.86"
