--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -25,6 +25,7 @@ harness = false
 workspace = true
 
 [dependencies]
+async-trait = "0.1.80"
 brush-interactive = { version = "^0.2.3", path = "../brush-interactive" }
 brush-parser = { version = "^0.2.3", path = "../brush-parser" }
 brush-core = { version = "^0.2.3", path = "../brush-core" }
@@ -32,14 +33,15 @@ brush-core = { version = "^0.2.3", path = "../brush-core" }
 clap = { version = "=4.4.18", features = ["derive", "wrap_help"] }
 const_format = "0.2.32"
 git-version = "0.3.9"
+lazy_static = "1.5.0"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
-tokio = { version = "1.37.0", features = ["rt"] }
+tokio = { version = "1.37.0", features = ["rt", "sync"] }
 
 [target.'cfg(any(windows, unix))'.dependencies]
-tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
+tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "sync"] }
 
 [dev-dependencies]
 anyhow = "1.0.86"
