--- a/.github/workflows/ci-reports.yaml
+++ b/.github/workflows/ci-reports.yaml
@@ -32,9 +32,10 @@ jobs:
           head_branch=$(echo '${{ steps.find-run.outputs.data }}' | jq -r '.head_branch')
           head_sha=$(echo '${{ steps.find-run.outputs.data }}' | jq -r '.head_sha')
           head_repo=$(echo '${{ steps.find-run.outputs.data }}' | jq -r '.head_repository.full_name')
+          head_repo_owner=$(echo '${{ steps.find-run.outputs.data }}' | jq -r '.head_repository.owner.login')
 
           if [[ "${head_branch}" != "" && "${head_repo}" != "" ]]; then
-            pr_number="$(gh pr view -R "${head_repo}" "${head_branch}" --json number -q '.number' || true)"
+            pr_number="$(gh pr list --state open --json number,headRefName,headRepositoryOwner,headRepository,baseRefName -q "map(select(.headRefName == \"${head_branch}\" and .headRepositoryOwner.login == \"${head_repo_owner}\" and .baseRefName == \"main\")) | .[0].number" || true)"
           else
             pr_number=""
           fi
