--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -22,8 +22,7 @@ async-trait = "0.1.81"
 brush-parser = { version = "^0.2.5", path = "../brush-parser" }
 cached = "0.53.0"
 cfg-if = "1.0.0"
-# N.B. Pin to 4.4.18 for now to keep to 1.72.0 as MSRV; 4.5.x requires a later version.
-clap = { version = "=4.4.18", features = ["derive", "wrap_help"] }
+clap = { version = "4.5.11", features = ["derive", "wrap_help"] }
 fancy-regex = "0.13.0"
 futures = "0.3.30"
 itertools = "0.13.0"
