--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -17,7 +17,7 @@ cargo-fuzz = true
 
 [dependencies]
 anyhow = "1.0.86"
-assert_cmd = "=2.0.13"
+assert_cmd = "2.0.15"
 lazy_static = "1.5.0"
 libfuzzer-sys = "0.4"
 tokio = { version = "1.37.0", features = ["rt"] }
