--- a/brush-shell/tests/cases/redirection.yaml
+++ b/brush-shell/tests/cases/redirection.yaml
@@ -29,6 +29,30 @@ cases:
     stdin: |
       echo hi >&2
 
+  - name: "Process substitution: basic"
+    stdin: |
+      shopt -u -o posix
+      echo <(:) >(:)
+      echo <(:) <(:)
+      echo >(:) >(:)
+
+  - name: "Process substitution: not in simple commands"
+    known_failure: true # Known to fail because we are only handling them in simple commands now
+    stdin: |
+      shopt -u -o posix
+      for f in <(echo hi); do echo $f; done
+
+  - name: "Process substitution: input redirection"
+    stdin: |
+      shopt -u -o posix
+      cat < <(echo hi)
+
+  - name: "Process substitution: output redirection"
+    stdin: |
+      shopt -u -o posix
+      echo hi > >(wc -l)
+      echo hi >> >(wc -l)
+
   - name: "Process substitution: input"
     stdin: |
       shopt -u -o posix
@@ -43,7 +67,6 @@ cases:
       ls -d . non-existent-dir &>>/dev/null
 
   - name: "Process substitution: input + output"
-    known_failure: true
     stdin: |
       shopt -u -o posix
       cp <(echo hi) >(cat)
