--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -14,17 +14,22 @@ rust-version.workspace = true
 [lib]
 bench = false
 
+[features]
+basic = []
+rustyline = ["dep:rustyline"]
+
 [lints]
 workspace = true
 
 [dependencies]
+async-trait = "0.1.82"
 brush-parser = { version = "^0.2.6", path = "../brush-parser" }
 brush-core = { version = "^0.2.7", path = "../brush-core" }
+rustyline = { package = "brush-rustyline-fork", version = "14.0.1", optional = true, features = [
+    "derive",
+] }
 thiserror = "1.0.62"
 tracing = "0.1.40"
 
 [target.'cfg(any(windows, unix))'.dependencies]
-rustyline = { package = "brush-rustyline-fork", version = "14.0.1", features = [
-    "derive",
-] }
 tokio = { version = "1.40.0", features = ["macros", "signal"] }
