--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -26,10 +26,10 @@ workspace = true
 
 [dependencies]
 async-trait = "0.1.82"
-brush-interactive = { version = "^0.2.7", path = "../brush-interactive" }
 brush-parser = { version = "^0.2.6", path = "../brush-parser" }
 brush-core = { version = "^0.2.7", path = "../brush-core" }
-clap = { version = "4.5.11", features = ["derive", "wrap_help"] }
+cfg-if = "1.0.0"
+clap = { version = "4.5.17", features = ["derive", "wrap_help"] }
 const_format = "0.2.33"
 git-version = "0.3.9"
 lazy_static = "1.5.0"
@@ -37,10 +37,16 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
+brush-interactive = { version = "^0.2.7", path = "../brush-interactive", features = [
+    "basic",
+] }
 tokio = { version = "1.40.0", features = ["rt", "sync"] }
 
 [target.'cfg(any(windows, unix))'.dependencies]
-tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "sync"] }
+brush-interactive = { version = "^0.2.7", path = "../brush-interactive", features = [
+    "rustyline",
+] }
+tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "sync"] }
 
 [dev-dependencies]
 anyhow = "1.0.87"
