perf: short-term optimization for common-case printf

--- a/brush-shell/tests/cases/builtins/printf.yaml
+++ b/brush-shell/tests/cases/builtins/printf.yaml
@@ -1,5 +1,9 @@
 name: "Builtins: printf"
 cases:
+  - name: "One-variable printf"
+    stdin: |
+      printf "%s" "0"
+
   - name: "Basic printf"
     stdin: |
       printf "%s, %s" "Hello" "world"
