fix: disable flaky test until it can be root-caused

--- a/brush-shell/tests/cases/redirection.yaml
+++ b/brush-shell/tests/cases/redirection.yaml
@@ -48,6 +48,7 @@ cases:
       cat < <(echo hi)
 
   - name: "Process substitution: output redirection"
+    skip: true # Periodically fails, possibly due to output race condition.
     stdin: |
       shopt -u -o posix
       echo hi > >(wc -l)
