--- a/deny.toml
+++ b/deny.toml
@@ -35,7 +35,14 @@ version = 2
 # List of explicitly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
-allow = ["Apache-2.0", "BSD-2-Clause", "BSL-1.0", "MIT", "Unicode-DFS-2016", "Zlib"]
+allow = [
+    "Apache-2.0",
+    "BSD-2-Clause",
+    "BSL-1.0",
+    "MIT",
+    "Unicode-DFS-2016",
+    "Zlib",
+]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
 # canonical license text of a valid SPDX license file.
@@ -92,7 +99,7 @@ skip-tree = [
 unknown-registry = "deny"
 unknown-git = "deny"
 allow-registry = ["https://github.com/rust-lang/crates.io-index"]
-allow-git = []
+allow-git = ["https://github.com/zhiburt/expectrl"]
 
 [sources.allow-org]
 # 1 or more github.com organizations to allow git sources for
